# serial-connection-for-sentry

./: CMakeLists.txt  package.xml  readme.md
include/: exec_cmd.hpp  frame_rate.hpp  mylog.hpp
include/serial_connection/: basic_connector.hpp  connector.hpp
include/struct_def/: aerial_commands.hpp  chassis_info.hpp  decision_points.hpp  game_state.hpp  geometry_msg_specified.hpp  offset_data.hpp  radar_robots_pos.hpp  receive_info.hpp  referee_data_for_decision.hpp  referee_robot_data.hpp  sentry_referee_decision.hpp  shoot_info.hpp  struct_def.hpp  target_offset_cmd.hpp  transmit_info.hpp
launch/: bridge.launch.py
serial_connection/: referee_config.yaml  virtual_referee.py
src/: connector_node.cpp  test.cpp  uart_fd.bash
