<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>serial_connection</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="wudidadaqiuqiu@qq.com">xy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>
  <!-- <build_depend>ament_python</build_depend>
  <exec_depend>ament_python</exec_depend> -->

  <depend>rclcpp</depend>
  <build_depend>rclpy</build_depend>
<!-- <exec_depend>rclcpp</exec_depend> -->
  <exec_depend>rclpy</exec_depend>
  <depend>easy_robot_commands</depend>
  <depend>geometry_msgs</depend>
  <depend>robot_msgs</depend>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <!-- <build_type>ament_python</build_type> -->
  </export>
</package>
